fixed spacing

--- a/react-app/src/components/auth/LoginForm.css
+++ b/react-app/src/components/auth/LoginForm.css
@@ -2,15 +2,14 @@
   font-size: 1.2rem;
   color: red;
 }
-
 form {
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 70%;
   margin: 0 auto;
+  font-family: "Hind Siliguri";
 }
-
 .errors__container {
   display: flex;
   flex-direction: column;
@@ -23,11 +22,9 @@ form {
   justify-content: center;
   margin-bottom: .5rem;
 }
-
 .formfield label {
   width: 8rem;
 }
-
 form button {
   background-color: dodgerblue;
   color: #fff;
